[package]
name = "taxmat"
version = "0.1.1"
authors = ["Samuel Vanderwaal <samuel.vanderwaal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
chrono = { version = "0.4.19", features = ["serde"] }
csv = "1.1.6"
serde = { version = "1.0.125", features = ["derive"] }
structopt = "0.3.21"

[dev-dependencies]
assert_cmd = "1.0.4"
